--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <li>Coding</li>
     </ul>
     <h2><u>Contacts:</u></h2>
-    <li><a href="https://mail.google.com/mail/u/0/#inbox" class="fa fa-lg fa-envelope">&nbsp;&nbsp;sahithibingi01@gmail.com</a></li><br>
-    <li><a href="https://www.instagram.com/sahithi_bingi/" class="fa fa-lg fa-instagram">&nbsp;&nbsp;sahithi_bingi</a></li><br>
-    <li><a href="https://www.linkedin.com/in/bingi-sahithi-priya/" class="fa fa-lg fa-linkedin">&nbsp;&nbsp;BINGI SAHITHI PRIYA</a></li>
+    <li><a href="https://mail.google.com/mail/u/0/#inbox" class="fa fa-lg fa-envelope" style="text-decoration:none">&nbsp;&nbsp;sahithibingi01@gmail.com</a></li><br>
+    <li><a href="https://www.instagram.com/sahithi_bingi/" class="fa fa-lg fa-instagram" style="text-decoration:none">&nbsp;&nbsp;sahithi_bingi</a></li><br>
+    <li><a href="https://www.linkedin.com/in/bingi-sahithi-priya/" class="fa fa-lg fa-linkedin" style="text-decoration:none">&nbsp;&nbsp;BINGI SAHITHI PRIYA</a></li>
 </body>
 </html>
