made changes in the code
added style="text-decoration:none" in the contacts and changed the color of the links(contacts)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
          td{
           color:greenyellow
          }
+         a{
+           color:white
+        }
     </style>
     <script src="https://kit.fontawesome.com/f4c8aa5edf.js" crossorigin="anonymous"></script>
     <link type="text/css" rel="stylesheet" href="path-to-fontawesome/font-awesome.css">
